--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -456,9 +456,9 @@ During the oracle evaluation, line-profiler showed that the slowest step was the
   \label{lst:slowbssprofile}
 \end{listing}
 
-The bottlenecks of the library use NumPy and SciPy operations, which are both Python numerical computation libraries that run on the CPU. The CuPy library\footnote{\url{https://cupy.dev/}} provides replacement functions of NumPy and SciPy which run on CUDA,\footnote{\url{https://developer.nvidia.com/cuda-toolkit}} the compute framework for NVIDIA GPUs. This allows for acceleration of numerical operations through GPU parallelization. Note that although PyTorch (\cite{pytorch}) also uses CUDA and was used in an earlier section \ref{sec:torchslicq}, for the BSS evaluation library CuPy was easier to work with as a drop-in NumPy/SciPy replacement.
+The bottlenecks of the library use NumPy and SciPy operations, which are Python numerical computation libraries that use the CPU. The CuPy library\footnote{\url{https://cupy.dev/}} provides replacement functions of NumPy and SciPy which run on NVIDIA GPUs using the CUDA compute framework.\footnote{\url{https://developer.nvidia.com/cuda-toolkit}} This allows for acceleration of numerical operations through GPU parallelization. Note that although PyTorch (\cite{pytorch}) also uses CUDA and was used in an earlier section \ref{sec:torchslicq}, for the BSS evaluation library CuPy was easier to work with as a drop-in NumPy/SciPy replacement.
 
-Similar to the NSGT/sliCQT library, the modifications made to the museval library were stored in my forked copy of the repository.\footnote{\url{https://github.com/sevagh/sigsep-mus-eval/commit/f3b7540faddc8d2b1bc91cecaf05fd20d96df7c6}} The replacement of the NumPy or SciPy function is as simple as using the CuPy equivalent, taking special care about GPU out-of-memory errors. The code listing \ref{code:thirddiff} shows an example of the CuPy replacement of one of the slow computations discovered by the profiler.
+Similar to the NSGT/sliCQT library, the modifications made to the museval library were stored in my forked copy of the repository.\footnote{\url{https://github.com/sevagh/sigsep-mus-eval/commit/f3b7540faddc8d2b1bc91cecaf05fd20d96df7c6}} The replacement of the NumPy or SciPy function is as simple as using the CuPy equivalent, taking special care about GPU out-of-memory errors. Code listing \ref{code:thirddiff} shows an example of the CuPy replacement of one of the slow computations discovered by the profiler.
 
 \begin{listing}[ht]
   \centering
